@@ -1,0 +1,45 @@
+#!/bin/sh
+# Begin $rc_base/init.d/lisa
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+# LISA bootscript submitted by Randy McMurchy - LFS-User@mcmurchy.com
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+export PATH=$PATH:/opt/kde/bin
+
+case "$1" in
+        start)
+                echo "Starting LISA Daemon..."
+                loadproc lisa
+                ;;
+
+        stop)
+                echo "Stopping LISA Daemon..."
+                killproc lisa
+                ;;
+
+        reload)
+                echo "Reloading LISA Daemon..."
+                reloadproc lisa
+                ;;
+
+        restart)
+                $0 stop
+                sleep 1
+                $0 start
+                ;;
+
+        status)
+                statusproc lisa
+                ;;
+
+        *)
+                echo "Usage: $0 {start|stop|reload|restart|status}"
+                exit 1
+                ;;
+esac
+
+# End $rc_base/init.d/lisa
